kubernetes/ceph-monitor/00-configmap.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: tools
