kubernetes/ceph-monitor/03-ceph-dash-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ceph-dash-ingress
  namespace: tools
  annotations:
    # type of authentication
    ingress.kubernetes.io/auth-type: basic
    # name of the secret that contains the user/password definitions
    ingress.kubernetes.io/auth-secret: basic-auth
    # message to display with an appropiate context why the authentication is required
    ingress.kubernetes.io/auth-realm: "Authentication Required"
    ingress.kubernetes.io/enable-cors: "true"
spec:
  rules:
  - host: ceph.clickyab.ae
    http:
      paths:
      - path: /
        backend:
          serviceName: ceph-dash-service
          servicePort: 5000
